# Duck_Game-Grupo5

./: CMakeLists.txt  Manual de usuario.md  Manual-de-usuario.md  README.md  install_dependencies.sh  uninstall_dependencies.sh
Entregables/: Manual de usuario.md  Manual-de-usuario.md
client/: CMakeLists.txt  InterfazGrafica.cpp  arma_interfaz.cpp  arma_interfaz.h  armadura_interfaz.cpp  armadura_interfaz.h  bala_interfaz.cpp  bala_interfaz.h  caja_interfaz.cpp  caja_interfaz.h  camara.cpp  camara.h  casco_interfaz.cpp  casco_interfaz.h  cliente.cpp  cliente.h  cliente_comando.h  cliente_enviar.cpp  cliente_enviar.h  cliente_protocolo.cpp  cliente_protocolo.h  cliente_recibir.cpp  cliente_recibir.h  disparo.cpp  disparo.h  entidad_interfaz.h  equipamiento_interfaz.cpp  equipamiento_interfaz.h  lobby.h  (+20 more)
common/: CMakeLists.txt  common_ak47.cpp  common_ak47.h  common_arma.cpp  common_arma.h  common_bala.cpp  common_bala.h  common_caja.cpp  common_caja.h  common_constantes.h  common_entidad.cpp  common_entidad.h  common_escopeta.cpp  common_escopeta.h  common_estado_juego.h  common_estado_pato.cpp  common_estado_pato.h  common_explosion.cpp  common_explosion.h  common_granada.cpp  common_granada.h  common_hitbox.cpp  common_hitbox.h  common_laserrifle.cpp  common_laserrifle.h  common_liberror.cpp  common_liberror.h  common_lobby_info.cpp  common_lobby_info.h  common_magnum.cpp  common_magnum.h  common_mapa.h  common_partida.cpp  common_partida.h  common_pato.cpp  common_pato.h  common_pedido_jugador.cpp  common_pedido_jugador.h  common_pewpewlaser.cpp  common_pewpewlaser.h  (+14 more)
(+54 files in other folders)
